# glb-rs

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/lib/: bytes.rs  extracted.rs  file.rs  glb_archive.rs  mod.rs  model.rs  test.rs  untyped_file.rs  utils.rs
